Update example notebook

--- a/notebooks/create_synthetic_data.ipynb
+++ b/notebooks/create_synthetic_data.ipynb
@@ -1418,10 +1418,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Anaheim Ducks</th>\n",
+       "      <th>Arizona Coyotes</th>\n",
+       "      <th>Boston Bruins</th>\n",
+       "      <th>Buffalo Sabres</th>\n",
+       "      <th>Calgary Flames</th>\n",
+       "      <th>Carolina Hurricanes</th>\n",
+       "      <th>Chicago Blackhawks</th>\n",
+       "      <th>Colorado Avalanche</th>\n",
+       "      <th>Columbus Blue Jackets</th>\n",
+       "      <th>Dallas Stars</th>\n",
+       "      <th>...</th>\n",
+       "      <th>New York Red Bulls</th>\n",
+       "      <th>Orlando City SC</th>\n",
+       "      <th>Philadelphia Union</th>\n",
+       "      <th>Portland Timbers</th>\n",
+       "      <th>Real Salt Lake</th>\n",
+       "      <th>San Jose Earthquakes</th>\n",
+       "      <th>Seattle Sounders FC</th>\n",
+       "      <th>Sporting Kansas City</th>\n",
+       "      <th>Toronto FC</th>\n",
+       "      <th>Vancouver Whitecaps FC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 84 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Anaheim Ducks  Arizona Coyotes  Boston Bruins  Buffalo Sabres  \\\n",
+       "0            1.0              0.0            0.0             0.0   \n",
+       "1            1.0              0.0            0.0             1.0   \n",
+       "2            0.0              0.0            0.0             1.0   \n",
+       "3            0.0              0.0            0.0             0.0   \n",
+       "4            0.0              0.0            0.0             1.0   \n",
+       "\n",
+       "   Calgary Flames  Carolina Hurricanes  Chicago Blackhawks  \\\n",
+       "0             0.0                  1.0                 0.0   \n",
+       "1             0.0                  0.0                 1.0   \n",
+       "2             0.0                  0.0                 0.0   \n",
+       "3             0.0                  0.0                 0.0   \n",
+       "4             0.0                  1.0                 0.0   \n",
+       "\n",
+       "   Colorado Avalanche  Columbus Blue Jackets  Dallas Stars  ...  \\\n",
+       "0                 0.0                    0.0           0.0  ...   \n",
+       "1                 1.0                    0.0           0.0  ...   \n",
+       "2                 0.0                    1.0           0.0  ...   \n",
+       "3                 1.0                    1.0           0.0  ...   \n",
+       "4                 0.0                    0.0           0.0  ...   \n",
+       "\n",
+       "   New York Red Bulls  Orlando City SC  Philadelphia Union  Portland Timbers  \\\n",
+       "0                 0.0              0.0                 0.0               0.0   \n",
+       "1                 0.0              0.0                 0.0               0.0   \n",
+       "2                 0.0              0.0                 0.0               0.0   \n",
+       "3                 0.0              0.0                 0.0               0.0   \n",
+       "4                 0.0              0.0                 0.0               0.0   \n",
+       "\n",
+       "   Real Salt Lake  San Jose Earthquakes  Seattle Sounders FC  \\\n",
+       "0             0.0                   0.0                  0.0   \n",
+       "1             0.0                   0.0                  0.0   \n",
+       "2             0.0                   0.0                  0.0   \n",
+       "3             0.0                   0.0                  0.0   \n",
+       "4             0.0                   0.0                  0.0   \n",
+       "\n",
+       "   Sporting Kansas City  Toronto FC  Vancouver Whitecaps FC  \n",
+       "0                   0.0         0.0                     0.0  \n",
+       "1                   0.0         0.0                     0.0  \n",
+       "2                   0.0         0.0                     0.0  \n",
+       "3                   0.0         0.0                     0.0  \n",
+       "4                   0.0         0.0                     0.0  \n",
+       "\n",
+       "[5 rows x 84 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_no_noise.head()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1448,6 +1671,20 @@
    "source": [
     "hover_df = pd.DataFrame(non_zero_values, columns=['supported_teams'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1697,14 +1934,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<!-- http://127.0.0.1:7001/140208518269840/ -->\n",
-       "<iframe src=\"http://127.0.0.1:7001/140208518269840/\" width=100% height=800 frameBorder=\"0\"></iframe>"
+       "<!-- http://127.0.0.1:7001/140208518135120/ -->\n",
+       "<iframe src=\"http://127.0.0.1:7001/140208518135120/\" width=100% height=800 frameBorder=\"0\"></iframe>"
       ]
      },
      "metadata": {},
@@ -1712,7 +1949,7 @@
     }
    ],
    "source": [
-    "cluster_id  = 2\n",
+    "cluster_id  = 0\n",
     "show(lg.local_explanations[cluster_id])"
    ]
   },
